load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

licenses(["notice"])

# For stardoc to reference the files.
exports_files(glob(["*.bzl"]))

bzl_library(
    name = "directory",
    srcs = ["directory.bzl"],
    visibility = ["//visibility:public"],
    deps = [":providers.bzl"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//visibility:public"],
)
