# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "directory",
    bzl_library_target = "//directory:directory",
)

stardoc_with_diff_test(
    name = "providers",
    bzl_library_target = "//directory:providers",
)

stardoc_with_diff_test(
    name = "subdirectory",
    bzl_library_target = "//directory:subdirectory",
)

stardoc_with_diff_test(
    name = "utils",
    bzl_library_target = "//directory:utils",
)

update_docs(name = "update")
